# plum_chess

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-cross-platform.yml  release_cross_platform.yml
benches/: perft_criterion.rs  v6_acceptance_criterion.rs  v7_perf_criterion.rs
benchmarks/: perft_bench_20260216_204916.csv
docs/: code_structure.md  end_game_optimization.md  humanizing.md  multithread_roadmap.md  optimization.md  performance_v7.md  uci_enhancement.md
docs/requirements/: v3.md  v4.md  v5.md  v6.md  v7.md
releases/: plum_chess_2.0.0_x86_64
src/: apply_move_to_game.rs  available_movement_masks.rs  board_location.rs  board_mask.rs  checked_move_description.rs  chess_engine_thread_trait.rs  chess_errors.rs  chess_move.rs  chess_move_description.rs  collision_masks.rs  debug_utils.rs  engine_greedy.rs  engine_greedy_1_layer.rs  engine_greedy_1_move.rs  engine_minimax.rs  engine_minimax_1deep_V0.rs  engine_minimax_1deep_v0.rs  engine_minimax_1deep_v1.rs  engine_minimax_basicscore.rs  engine_minimax_strategy1.rs  engine_random.rs  errors.rs  game_state.rs  generate_all_moves.rs  generate_movements.rs  generate_moves_level_1.rs  generate_moves_level_2.rs  generate_moves_level_3.rs  generate_moves_level_4.rs  generate_moves_level_5.rs  inspect_check.rs  inspect_if_king_is_under_check.rs  lib.rs  main.rs  move_description.rs  move_generator.rs  move_logic.rs  move_logic_old.rs  perft.rs  piece_class.rs  (+11 more)
src/engines/: engine_greedy.rs  engine_humanized_v5.rs  engine_iterative.rs  engine_iterative_v1.rs  engine_random.rs  (+18 more)
tables/: README.md
(+53 files in other folders)
