[package]
name = "plum_chess"
version = "7.12.0"
edition = "2021"

[dependencies]
rand = "0"
chrono = "0"

[dev-dependencies]
criterion = "0"

[[bench]]
name = "perft_criterion"
harness = false

[[bench]]
name = "v7_perf_criterion"
harness = false

[[bench]]
name = "v6_acceptance_criterion"
harness = false
